ensure Editor Tools sidebar nav does not overlap upon scrolling (bug 737633)

--- a/media/css/zamboni/editors.css
+++ b/media/css/zamboni/editors.css
@@ -586,6 +586,15 @@ div.editor-stats-table > div.editor-stats-dark {
      font-weight: normal;
 }
 
+#scroll_sidebar {
+    position: absolute;
+    top: 0;
+}
+#scroll_sidebar.sticky {
+    position: fixed;
+    top: 10px;
+}
+
 #review-files {
     margin: 0;
     width: 100%;
